# data3310

./: .gitignore  README.md  index.html
FinalProject/: DATA_3310_Final_Project_Roy.ipynb  DATA_3310_Final_Project_Stage2_Roy.ipynb  emissions-weighted-carbon-price.csv  pyproject.toml
HW1/: main.ipynb  pyproject.toml  sunshine.csv
HW2/: HW2.html  HW2.ipynb  HW2.md  pyproject.toml
HW4/: HW4.html  HW4.ipynb
HW5/: HW5.html  HW5.ipynb  pyproject.toml
HW6/: HW6.html  HW6.ipynb  pyproject.toml
HW7/: HW7.html  HW7.ipynb  pyproject.toml
