[project]
name = "finalproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "folium>=0.20.0",
    "ipykernel>=7.2.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pycountry>=26.2.16",
    "requests>=2.32.5",
    "vega-datasets>=0.9.0",
]
