[project]
name = "hw6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "fuzzywuzzy>=0.18.0",
    "ipykernel>=7.2.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "vega-datasets>=0.9.0",
    "wordcloud>=1.9.6",
]
